--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 
-name: echo-ddd-local
+name: gocrafter
 
 services:
   # DB
-  db_api:
-    container_name: echo-ddd-db-api
+  db:
+    container_name: gocrafter-db
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: mysql_root
@@ -14,9 +14,9 @@ services:
       MYSQL_PASSWORD: mysql_password
       TZ: 'Asia/Tokyo'
     volumes:
-      - ./docker/db_api/data:/var/lib/mysql  
-      - ./docker/db_api/my.cnf:/etc/mysql/conf.d/my.cnf
-      - ./docker/db_api/sql:/docker-entrypoint-initdb.d
+      - ./docker/db/data:/var/lib/mysql  
+      - ./docker/db/my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./docker/db/sql:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
     tty: true
@@ -27,7 +27,7 @@ services:
 
   # Gen
   gen:
-    container_name: echo-ddd-gen
+    container_name: gocrafter-gen
     env_file:
       - .env.api.local
     build:
@@ -38,12 +38,12 @@ services:
       - ./:/go/src/app
     tty: true
     depends_on:
-      db_api:
+      db:
         condition: service_healthy
 
   # API
   api:
-    container_name: echo-ddd-api
+    container_name: gocrafter-api
     env_file:
       - .env.api.local
     build: 
@@ -56,12 +56,12 @@ services:
       - "8001:8000"
     tty: true
     depends_on:
-      db_api:
+      db:
         condition: service_healthy
 
   # Batch
   batch:
-    container_name: echo-ddd-batch
+    container_name: gocrafter-batch
     env_file:
       - .env.api.local
     build:
@@ -72,12 +72,12 @@ services:
       - ./:/go/src/app
     tty: true
     depends_on:
-      db_api:
+      db:
         condition: service_healthy
 
   # Swagger
   swagger:
-    container_name: echo-ddd-swagger
+    container_name: gocrafter-swagger
     env_file:
       - .env.api.local
     build:
