--- a/docs/entity/Account.yaml
+++ b/docs/entity/Account.yaml
@@ -1,53 +1,40 @@
-name: ExampleSub
+name: Account
 database: user
-package: exampleSub
-table: example_sub
+package: account
+table: account
 structure:
   ID:
     name: id
     type: int64
     nullable: false
     number: 1
-  UserID:
-    name: user_id
+  UUID:
+    name: uuid
     type: int64
     nullable: false
     number: 2
-  ExampleID:
-    name: example_id
-    type: int64
-    nullable: false
-    number: 3
   Name:
     name: name
     type: string
     nullable: false
-    number: 4
-  Detail:
-    name: detail
+    number: 3
+  Password:
+    name: password
     type: string
-    nullable: true
-    number: 5
-  Count:
-    name: count
-    type: int
     nullable: false
-    number: 6
+    number: 4
   CreatedAt:
     name: created_at
     type: time.Time
     nullable: false
-    number: 7
+    number: 5
   UpdatedAt:
     name: updated_at
     type: time.Time
     nullable: false
-    number: 8
+    number: 6
 primary:
   - ID
 index:
-  - UserID
-  - ExampleID
-  - ID,UserID
-  - ID,ExampleID
-  - ID,UserID,ExampleID
+  - UUID
+  - ID,UUID
