--- a/docs/api/response/account/RegisterAccount.yaml
+++ b/docs/api/response/account/RegisterAccount.yaml
@@ -1,23 +1,28 @@
 name: RegisterAccount
 package: account
 structure:
-  ID:
-    name: id
-    type: inbt64
+  Status:
+    name: status
+    type: int64
     nullable: false
     number: 1
+  ID:
+    name: id
+    type: int64
+    nullable: false
+    number: 2
   UUID:
     name: uuid
     type: string
     nullable: false
-    number: 2
+    number: 3
   Name:
     name: name
     type: string
     nullable: false
-    number: 3
+    number: 4
   Password:
     name: password
     type: string
     nullable: false
-    number: 4
+    number: 5
