--- a/.env.test
+++ b/.env.test
@@ -2,22 +2,24 @@ APP_ENV=dev
 TZ=Asia/Tokyo
 
 # UserDB
-User_MYSQL_DATABASE=gocrafter_user
-User_MYSQL_WRITE_USER=mysql_user
-User_MYSQL_WRITE_PASSWORD=mysql_password
-User_MYSQL_WRITE_HOST=host.docker.internal:3308
-User_MYSQL_READ_USER=mysql_user
-User_MYSQL_READ_PASSWORD=mysql_password
-User_MYSQL_READ_HOST=host.docker.internal:3308
+USER_MYSQL_DATABASE=gocrafter_user_test
+USER_MYSQL_WRITE_USER=mysql_user
+USER_MYSQL_WRITE_PASSWORD=mysql_password
+USER_MYSQL_WRITE_HOST=host.docker.internal:3308
+USER_MYSQL_READ_USER=mysql_user
+USER_MYSQL_READ_PASSWORD=mysql_password
+USER_MYSQL_READ_HOST=host.docker.internal:3308
 
 # MasterDB
-Master_MYSQL_DATABASE=gocrafter_master
-Master_MYSQL_WRITE_USER=mysql_user
-Master_MYSQL_WRITE_PASSWORD=mysql_password
-Master_MYSQL_WRITE_HOST=host.docker.internal:3309
-Master_MYSQL_READ_USER=mysql_user
-Master_MYSQL_READ_PASSWORD=mysql_password
-Master_MYSQL_READ_HOST=host.docker.internal:3309
+MASTER_MYSQL_DATABASE=gocrafter_master_test
+MASTER_MYSQL_WRITE_USER=mysql_user
+MASTER_MYSQL_WRITE_PASSWORD=mysql_password
+MASTER_MYSQL_WRITE_HOST=host.docker.internal:3309
+MASTER_MYSQL_READ_USER=mysql_user
+MASTER_MYSQL_READ_PASSWORD=mysql_password
+MASTER_MYSQL_READ_HOST=host.docker.internal:3309
+
+TEST_API_URL=http://0.0.0.0:8000
 
 # Auth
 AUTH_SECRET=secret_key
