--- a/docs/api/response/account/RegisterAccount.yaml
+++ b/docs/api/response/account/RegisterAccount.yaml
@@ -6,23 +6,8 @@ structure:
     type: int64
     nullable: false
     number: 1
-  ID:
-    name: id
-    type: int64
+  Item:
+    name: item
+    type: Account
     nullable: false
     number: 2
-  UUID:
-    name: uuid
-    type: string
-    nullable: false
-    number: 3
-  Name:
-    name: name
-    type: string
-    nullable: false
-    number: 4
-  Password:
-    name: password
-    type: string
-    nullable: false
-    number: 5
