ログインAPIを追加

--- a/docs/api/response/account/Account.yaml
+++ b/docs/api/response/account/Account.yaml
@@ -21,3 +21,8 @@ structure:
     type: string
     nullable: false
     number: 5
+  Token:
+    name: token
+    type: string
+    nullable: false
+    number: 6
