--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -35,6 +35,7 @@ RUN apk upgrade --update && apk add bash && apk --no-cache add git
 
 RUN go install github.com/swaggo/swag/cmd/swag@v1.8.0
 RUN go install github.com/google/wire/cmd/wire@v0.5.0
+RUN go install github.com/golang/mock/mockgen@v1.6.0
 
 EXPOSE 8000
 
