--- a/docker/gen/Dockerfile
+++ b/docker/gen/Dockerfile
@@ -19,3 +19,4 @@ RUN apk upgrade --update && apk add bash && apk --no-cache add git
 
 RUN go install github.com/swaggo/swag/cmd/swag@v1.8.0
 RUN go install github.com/google/wire/cmd/wire@v0.5.0
+RUN go install github.com/golang/mock/mockgen@v1.6.0
