--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -3,20 +3,18 @@ version: '3.8'
 name: gocrafter
 
 services:
-  # UserDB
-  db_user:
-    container_name: gocrafter-db-user
+  db:
+    container_name: gocrafter-db
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: mysql_root
-      MYSQL_DATABASE: gocrafter_user
       MYSQL_USER: mysql_user
       MYSQL_PASSWORD: mysql_password
       TZ: 'Asia/Tokyo'
     volumes:
-      - ./docker/db_user/data:/var/lib/mysql  
-      - ./docker/db_user/my.cnf:/etc/mysql/conf.d/my.cnf
-      - ./docker/db_user/sql:/docker-entrypoint-initdb.d
+      - ./docker/db/init:/docker-entrypoint-initdb.d
+      - ./docker/db/my.cnf:/etc/mysql/conf.d/my.cnf
+      - db-local:/var/lib/mysql
     ports:
       - "3306:3306"
     tty: true
@@ -24,30 +22,7 @@ services:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
       timeout: 20s
       retries: 10
-  
-  # MasterDB
-  db_master:
-    container_name: gocrafter-db-master
-    image: mysql:8.0
-    environment:
-      MYSQL_ROOT_PASSWORD: mysql_root
-      MYSQL_DATABASE: gocrafter_master
-      MYSQL_USER: mysql_user
-      MYSQL_PASSWORD: mysql_password
-      TZ: 'Asia/Tokyo'
-    volumes:
-      - ./docker/db_master/data:/var/lib/mysql  
-      - ./docker/db_master/my.cnf:/etc/mysql/conf.d/my.cnf
-      - ./docker/db_master/sql:/docker-entrypoint-initdb.d
-    ports:
-      - "3307:3306"
-    tty: true
-    healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-      timeout: 20s
-      retries: 10
 
-  # Gen
   gen:
     container_name: gocrafter-gen
     env_file:
@@ -60,12 +35,9 @@ services:
       - ./:/go/src/app
     tty: true
     depends_on:
-      db_user:
-        condition: service_healthy
-      db_master:
+      db:
         condition: service_healthy
 
-  # API
   api:
     container_name: gocrafter-api
     env_file:
@@ -80,12 +52,9 @@ services:
       - "8001:8000"
     tty: true
     depends_on:
-      db_user:
-        condition: service_healthy
-      db_master:
+      db:
         condition: service_healthy
 
-  # Batch
   batch:
     container_name: gocrafter-batch
     env_file:
@@ -98,12 +67,9 @@ services:
       - ./:/go/src/app
     tty: true
     depends_on:
-      db_user:
-        condition: service_healthy
-      db_master:
+      db:
         condition: service_healthy
 
-  # Swagger
   swagger:
     container_name: gocrafter-swagger
     env_file:
@@ -117,3 +83,7 @@ services:
     ports:
       - "8000:8000"
     tty: true
+
+volumes:
+  db-local:
+    driver: local
