--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -3,51 +3,26 @@ version: '3.8'
 name: gocrafter-test
 
 services:
-  # UserDB
-  test_db_user:
-    container_name: gocrafter-test-db-user
+  test_db:
+    container_name: gocrafter-test-db
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: mysql_root
-      MYSQL_DATABASE: gocrafter_user_test
       MYSQL_USER: mysql_user
       MYSQL_PASSWORD: mysql_password
       TZ: 'Asia/Tokyo'
     volumes:
-      - ./docker/test_db_user/data:/var/lib/mysql  
-      - ./docker/test_db_user/my.cnf:/etc/mysql/conf.d/my.cnf
-      - ./docker/test_db_user/sql:/docker-entrypoint-initdb.d
+      - ./docker/test_db/my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./docker/test_db/init:/docker-entrypoint-initdb.d
+      - db-local-test:/var/lib/mysql
     ports:
-      - "3308:3306"
+      - "3307:3306"
     tty: true
     healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-      timeout: 20s
-      retries: 10
-  
-  # MasterDB
-  test_db_master:
-    container_name: gocrafter-test-db-master
-    image: mysql:8.0
-    environment:
-      MYSQL_ROOT_PASSWORD: mysql_root
-      MYSQL_DATABASE: gocrafter_master_test
-      MYSQL_USER: mysql_user
-      MYSQL_PASSWORD: mysql_password
-      TZ: 'Asia/Tokyo'
-    volumes:
-      - ./docker/test_db_master/data:/var/lib/mysql  
-      - ./docker/test_db_master/my.cnf:/etc/mysql/conf.d/my.cnf
-      - ./docker/test_db_master/sql:/docker-entrypoint-initdb.d
-    ports:
-      - "3309:3306"
-    tty: true
-    healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       timeout: 20s
       retries: 10
 
-# API Test
   test_api:
     container_name: gocrafter-test-api
     env_file:
@@ -60,7 +35,9 @@ services:
       - ./:/go/src/app
     tty: true
     depends_on:
-      test_db_user:
+      test_db:
         condition: service_healthy
-      test_db_master:
-        condition: service_healthy
+
+volumes:
+   db-local-test:
+     driver: local
