シャーディング機能を追加

--- a/.env.local
+++ b/.env.local
@@ -2,13 +2,22 @@ APP_ENV=dev
 TZ=Asia/Tokyo
 
 # UserDB
-USER_MYSQL_DATABASE=gocrafter_user
-USER_MYSQL_WRITE_USER=mysql_user
-USER_MYSQL_WRITE_PASSWORD=mysql_password
-USER_MYSQL_WRITE_HOST=host.docker.internal:3306
-USER_MYSQL_READ_USER=mysql_user
-USER_MYSQL_READ_PASSWORD=mysql_password
-USER_MYSQL_READ_HOST=host.docker.internal:3306
+SHARD_COUNT=2
+USER_MYSQL_DATABASE_1=gocrafter_user_1
+USER_MYSQL_WRITE_USER_1=mysql_user
+USER_MYSQL_WRITE_PASSWORD_1=mysql_password
+USER_MYSQL_WRITE_HOST_1=host.docker.internal:3306
+USER_MYSQL_READ_USER_1=mysql_user
+USER_MYSQL_READ_PASSWORD_1=mysql_password
+USER_MYSQL_READ_HOST_1=host.docker.internal:3306
+
+USER_MYSQL_DATABASE_2=gocrafter_user_2
+USER_MYSQL_WRITE_USER_2=mysql_user
+USER_MYSQL_WRITE_PASSWORD_2=mysql_password
+USER_MYSQL_WRITE_HOST_2=host.docker.internal:3306
+USER_MYSQL_READ_USER_2=mysql_user
+USER_MYSQL_READ_PASSWORD_2=mysql_password
+USER_MYSQL_READ_HOST_2=host.docker.internal:3306
 
 # MasterDB
 MASTER_MYSQL_DATABASE=gocrafter_master
