--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,27 @@
 APP_ENV=dev
 TZ=Asia/Tokyo
 
+# Auth
+AUTH_SECRET=secret_key
+
+# ConfigDB
+CONFIG_MYSQL_DATABASE=gocrafter_config
+CONFIG_MYSQL_WRITE_USER=mysql_user
+CONFIG_MYSQL_WRITE_PASSWORD=mysql_password
+CONFIG_MYSQL_WRITE_HOST=host.docker.internal:3306
+CONFIG_MYSQL_READ_USER=mysql_user
+CONFIG_MYSQL_READ_PASSWORD=mysql_password
+CONFIG_MYSQL_READ_HOST=host.docker.internal:3306
+
+# MasterDB
+MASTER_MYSQL_DATABASE=gocrafter_master
+MASTER_MYSQL_WRITE_USER=mysql_user
+MASTER_MYSQL_WRITE_PASSWORD=mysql_password
+MASTER_MYSQL_WRITE_HOST=host.docker.internal:3306
+MASTER_MYSQL_READ_USER=mysql_user
+MASTER_MYSQL_READ_PASSWORD=mysql_password
+MASTER_MYSQL_READ_HOST=host.docker.internal:3306
+
 # UserDB
 SHARD_COUNT=2
 USER_MYSQL_DATABASE_1=gocrafter_user_1
@@ -18,15 +39,3 @@ USER_MYSQL_WRITE_HOST_2=host.docker.internal:3306
 USER_MYSQL_READ_USER_2=mysql_user
 USER_MYSQL_READ_PASSWORD_2=mysql_password
 USER_MYSQL_READ_HOST_2=host.docker.internal:3306
-
-# MasterDB
-MASTER_MYSQL_DATABASE=gocrafter_master
-MASTER_MYSQL_WRITE_USER=mysql_user
-MASTER_MYSQL_WRITE_PASSWORD=mysql_password
-MASTER_MYSQL_WRITE_HOST=host.docker.internal:3306
-MASTER_MYSQL_READ_USER=mysql_user
-MASTER_MYSQL_READ_PASSWORD=mysql_password
-MASTER_MYSQL_READ_HOST=host.docker.internal:3306
-
-# Auth
-AUTH_SECRET=secret_key
