--- a/docs/entity/config/Shard.yaml
+++ b/docs/entity/config/Shard.yaml
@@ -6,26 +6,31 @@ structure:
     type: int64
     nullable: false
     number: 1
+  ShardKey:
+    name: shard_key
+    type: int
+    nullable: false
+    number: 2
   Name:
     name: name
     type: string
     nullable: false
-    number: 2
+    number: 3
   Count:
     name: count
     type: int
     nullable: false
-    number: 3
+    number: 4
   CreatedAt:
     name: created_at
     type: time.Time
     nullable: false
-    number: 4
+    number: 5
   UpdatedAt:
     name: updated_at
     type: time.Time
     nullable: false
-    number: 5
+    number: 6
 primary:
   - ID
 index:
