--- a/docs/api/request/account/CheckAccount.yaml
+++ b/docs/api/request/account/CheckAccount.yaml
@@ -1,8 +1,13 @@
 name: CheckAccount
 package: account
 structure:
+  ShardKey:
+    name: shard_key
+    type: int
+    nullable: false
+    number: 1
   UUID:
     name: uuid
     type: string
     nullable: false
-    number: 1
+    number: 2
