--- a/docs/entity/user/Account.yaml
+++ b/docs/entity/user/Account.yaml
@@ -6,31 +6,36 @@ structure:
     type: int64
     nullable: false
     number: 1
+  ShardKey:
+    name: shard_key
+    type: int
+    nullable: false
+    number: 2
   UUID:
     name: uuid
     type: string
     nullable: false
-    number: 2
+    number: 3
   Name:
     name: name
     type: string
     nullable: false
-    number: 3
+    number: 4
   Password:
     name: password
     type: string
     nullable: false
-    number: 4
+    number: 5
   CreatedAt:
     name: created_at
     type: time.Time
     nullable: false
-    number: 5
+    number: 6
   UpdatedAt:
     name: updated_at
     type: time.Time
     nullable: false
-    number: 6
+    number: 7
 primary:
   - ID
 index:
