テスト用コンテナのシャード設定を追加

--- a/.env.test
+++ b/.env.test
@@ -1,14 +1,17 @@
 APP_ENV=dev
 TZ=Asia/Tokyo
 
-# UserDB
-USER_MYSQL_DATABASE=gocrafter_user_test
-USER_MYSQL_WRITE_USER=mysql_user
-USER_MYSQL_WRITE_PASSWORD=mysql_password
-USER_MYSQL_WRITE_HOST=host.docker.internal:3307
-USER_MYSQL_READ_USER=mysql_user
-USER_MYSQL_READ_PASSWORD=mysql_password
-USER_MYSQL_READ_HOST=host.docker.internal:3307
+# Auth
+AUTH_SECRET=secret_key
+
+# ConfigDB
+CONFIG_MYSQL_DATABASE=gocrafter_config_test
+CONFIG_MYSQL_WRITE_USER=mysql_user
+CONFIG_MYSQL_WRITE_PASSWORD=mysql_password
+CONFIG_MYSQL_WRITE_HOST=host.docker.internal:3307
+CONFIG_MYSQL_READ_USER=mysql_user
+CONFIG_MYSQL_READ_PASSWORD=mysql_password
+CONFIG_MYSQL_READ_HOST=host.docker.internal:3307
 
 # MasterDB
 MASTER_MYSQL_DATABASE=gocrafter_master_test
@@ -19,7 +22,20 @@ MASTER_MYSQL_READ_USER=mysql_user
 MASTER_MYSQL_READ_PASSWORD=mysql_password
 MASTER_MYSQL_READ_HOST=host.docker.internal:3307
 
-TEST_API_URL=http://0.0.0.0:8000
+# UserDB
+SHARD_COUNT=2
+USER_MYSQL_DATABASE_1=gocrafter_user_1_test
+USER_MYSQL_WRITE_USER_1=mysql_user
+USER_MYSQL_WRITE_PASSWORD_1=mysql_password
+USER_MYSQL_WRITE_HOST_1=host.docker.internal:3307
+USER_MYSQL_READ_USER_1=mysql_user
+USER_MYSQL_READ_PASSWORD_1=mysql_password
+USER_MYSQL_READ_HOST_1=host.docker.internal:3307
 
-# Auth
-AUTH_SECRET=secret_key
+USER_MYSQL_DATABASE_2=gocrafter_user_2_test
+USER_MYSQL_WRITE_USER_2=mysql_user
+USER_MYSQL_WRITE_PASSWORD_2=mysql_password
+USER_MYSQL_WRITE_HOST_2=host.docker.internal:3307
+USER_MYSQL_READ_USER_2=mysql_user
+USER_MYSQL_READ_PASSWORD_2=mysql_password
+USER_MYSQL_READ_HOST_2=host.docker.internal:3307
