--- a/docs/entity/master/Item.yaml
+++ b/docs/entity/master/Item.yaml
@@ -1,5 +1,5 @@
-name: LoginRewardModel
-package: loginReward
+name: Item
+package: item
 structure:
   ID:
     name: id
@@ -11,24 +11,22 @@ structure:
     type: string
     nullable: false
     number: 2
-  EventID:
-    name: event_id
-    type: int64
+  Detail:
+    name: detail
+    type: string
     nullable: false
     number: 3
   CreatedAt:
     name: created_at
     type: time.Time
     nullable: false
-    number: 5
+    number: 4
   UpdatedAt:
     name: updated_at
     type: time.Time
     nullable: false
-    number: 6
+    number: 5
 primary:
   - ID
 index:
   - Name
-  - EventID
-  - Name,EventID
