--- a/docs/entity/master/LoginRewardReward.yaml
+++ b/docs/entity/master/LoginRewardReward.yaml
@@ -1,4 +1,4 @@
-name: LoginRewardModel
+name: LoginRewardReward
 package: loginReward
 structure:
   ID:
@@ -6,16 +6,21 @@ structure:
     type: int64
     nullable: false
     number: 1
+  LoginRewardID:
+    name: login_reward_id
+    type: int64
+    nullable: false
+    number: 2
+  ItemID:
+    name: item_id
+    type: int64
+    nullable: false
+    number: 3
   Name:
     name: name
     type: string
     nullable: false
-    number: 2
-  EventID:
-    name: event_id
-    type: int64
-    nullable: false
-    number: 3
+    number: 4
   CreatedAt:
     name: created_at
     type: time.Time
@@ -30,5 +35,6 @@ primary:
   - ID
 index:
   - Name
-  - EventID
-  - Name,EventID
+  - LoginRewardID
+  - ItemID
+  - LoginRewardID,ItemID
