--- a/docs/entity/master/LoginRewardReward.yaml
+++ b/docs/entity/master/LoginRewardReward.yaml
@@ -16,6 +16,11 @@ structure:
     type: int64
     nullable: false
     number: 3
+  StepNumber:
+    name: step_number
+    type: int
+    nullable: false
+    number: 5
   Name:
     name: name
     type: string
