--- a/docs/entity/user/LoginRewardStatus.yaml
+++ b/docs/entity/user/LoginRewardStatus.yaml
@@ -21,16 +21,21 @@ structure:
     type: int64
     nullable: false
     number: 4
-  CreatedAt:
+  LastReceivedAt:
     name: created_at
     type: time.Time
     nullable: false
     number: 5
+  CreatedAt:
+    name: created_at
+    type: time.Time
+    nullable: false
+    number: 6
   UpdatedAt:
     name: updated_at
     type: time.Time
     nullable: false
-    number: 6
+    number: 7
 primary:
   - ID
 index:
