--- a/docs/api/response/loginReward/LoginRewardReceiveStep.yaml
+++ b/docs/api/response/loginReward/LoginRewardReceiveStep.yaml
@@ -1,8 +1,13 @@
 name: LoginRewardReceiveStep
 package: loginReward
 structure:
+  ID:
+    name: id
+    type: int64
+    nullable: false
+    number: 1
   StepNumber:
     name: step_number
     type: int
     nullable: false
-    number: 1
+    number: 2
