--- a/docs/api/response/loginReward/LoginRewardStatus.yaml
+++ b/docs/api/response/loginReward/LoginRewardStatus.yaml
@@ -1,23 +1,28 @@
 name: LoginRewardStatus
 package: loginReward
 structure:
+  ID:
+    name: id
+    type: int64
+    nullable: false
+    number: 1
   LoginRewardModel:
     name: login_reward_model
     type: LoginRewardModel
     nullable: false
-    number: 1
+    number: 2
   LoginRewardReceiveSteps:
     name: login_reward_receive_steps
     type: LoginRewardReceiveSteps
     nullable: false
-    number: 2
+    number: 3
   Item:
     name: item
     type: Item
     nullable: false
-    number: 3
+    number: 4
   LastReceivedAt:
     name: created_at
     type: time.Time
     nullable: false
-    number: 4
+    number: 5
