--- a/docs/api/request/loginReward/ReceiveLoginReward.yaml
+++ b/docs/api/request/loginReward/ReceiveLoginReward.yaml
@@ -6,13 +6,18 @@ structure:
     type: int
     nullable: false
     number: 1
+  AccountID:
+    name: account_id
+    type: int64
+    nullable: false
+    number: 2
   UUID:
     name: uuid
     type: string
     nullable: false
-    number: 2
+    number: 3
   LoginRewardModelID:
     name: login_reward_model_id
     type: int64
     nullable: false
-    number: 3
+    number: 4
