--- a/docs/api/request/loginReward/ReceiveLoginReward.yaml
+++ b/docs/api/request/loginReward/ReceiveLoginReward.yaml
@@ -16,8 +16,8 @@ structure:
     type: string
     nullable: false
     number: 3
-  LoginRewardModelID:
-    name: login_reward_model_id
-    type: int64
+  LoginRewardModelName:
+    name: login_reward_model_name
+    type: string
     nullable: false
     number: 4
