--- a/docs/api/response/loginReward/Event.yaml
+++ b/docs/api/response/loginReward/Event.yaml
@@ -11,18 +11,28 @@ structure:
     type: string
     nullable: false
     number: 2
+  ResetHour:
+    name: repeat_hour
+    type: int
+    nullable: true
+    number: 3
   Repeat:
     name: repeat
     type: bool
     nullable: false
-    number: 3
+    number: 4
+  RepeatStartAt:
+    name: repeat_start_at
+    type: time.Time
+    nullable: true
+    number: 5
   StartAt:
     name: start_at
     type: time.Time
     nullable: true
-    number: 4
+    number: 6
   EndAt:
     name: end_at
     type: time.Time
     nullable: true
-    number: 5
+    number: 7
