--- a/docs/api/response/loginReward/LoginRewardModel.yaml
+++ b/docs/api/response/loginReward/LoginRewardModel.yaml
@@ -16,3 +16,8 @@ structure:
     type: Event
     nullable: false
     number: 3
+  LoginRewardRewards:
+    name: login_reward_reward
+    type: LoginRewardRewards
+    nullable: false
+    number: 4
