--- a/docs/entity/master/Event.yaml
+++ b/docs/entity/master/Event.yaml
@@ -11,31 +11,41 @@ structure:
     type: string
     nullable: false
     number: 2
+  ResetHour:
+    name: repeat_hour
+    type: int
+    nullable: true
+    number: 3
   Repeat:
     name: repeat
     type: bool
     nullable: false
-    number: 3
+    number: 4
+  RepeatStartAt:
+    name: repeat_start_at
+    type: time.Time
+    nullable: true
+    number: 5
   StartAt:
     name: start_at
     type: time.Time
     nullable: true
-    number: 4
+    number: 6
   EndAt:
     name: end_at
     type: time.Time
     nullable: true
-    number: 5
+    number: 7
   CreatedAt:
     name: created_at
     type: time.Time
     nullable: false
-    number: 6
+    number: 8
   UpdatedAt:
     name: updated_at
     type: time.Time
     nullable: false
-    number: 7
+    number: 8
 primary:
   - ID
 index:
