--- a/docs/entity/master/LoginRewardReward.yaml
+++ b/docs/entity/master/LoginRewardReward.yaml
@@ -6,14 +6,14 @@ structure:
     type: int64
     nullable: false
     number: 1
-  LoginRewardID:
-    name: login_reward_id
-    type: int64
+  LoginRewardModelName:
+    name: login_reward_model_name
+    type: string
     nullable: false
     number: 2
-  ItemID:
-    name: item_id
-    type: int64
+  ItemName:
+    name: item_name
+    type: string
     nullable: false
     number: 3
   StepNumber:
@@ -40,6 +40,6 @@ primary:
   - ID
 index:
   - Name
-  - LoginRewardID
-  - ItemID
-  - LoginRewardID,ItemID
+  - LoginRewardModelName
+  - ItemName
+  - LoginRewardModelName,ItemName
