ログイン報酬関連の構造体定義を修正

--- a/docs/api/response/loginReward/Event.yaml
+++ b/docs/api/response/loginReward/Event.yaml
@@ -16,8 +16,8 @@ structure:
     type: int
     nullable: true
     number: 3
-  Repeat:
-    name: repeat
+  RepeatSetting:
+    name: repeat_setting
     type: bool
     nullable: false
     number: 4
