--- a/docs/api/response/loginReward/LoginRewardStatus.yaml
+++ b/docs/api/response/loginReward/LoginRewardStatus.yaml
@@ -17,7 +17,7 @@ structure:
     nullable: false
     number: 3
   LastReceivedAt:
-    name: created_at
+    name: last_received_at
     type: time.Time
     nullable: false
     number: 4
