--- a/docs/entity/user/LoginRewardStatus.yaml
+++ b/docs/entity/user/LoginRewardStatus.yaml
@@ -12,7 +12,7 @@ structure:
     nullable: false
     number: 2
   AccountID:
-    name: user_id
+    name: account_id
     type: int64
     nullable: false
     number: 3
@@ -22,7 +22,7 @@ structure:
     nullable: false
     number: 4
   LastReceivedAt:
-    name: created_at
+    name: last_received_at
     type: time.Time
     nullable: false
     number: 5
