シャードキーを文字列に修正

--- a/.env.local
+++ b/.env.local
@@ -24,6 +24,7 @@ MASTER_MYSQL_READ_HOST=host.docker.internal:3306
 
 # UserDB
 SHARD_COUNT=2
+USER_MYSQL_SHARD_KEY_1=SHARD_1
 USER_MYSQL_DATABASE_1=gocrafter_user_1
 USER_MYSQL_WRITE_USER_1=mysql_user
 USER_MYSQL_WRITE_PASSWORD_1=mysql_password
@@ -32,6 +33,7 @@ USER_MYSQL_READ_USER_1=mysql_user
 USER_MYSQL_READ_PASSWORD_1=mysql_password
 USER_MYSQL_READ_HOST_1=host.docker.internal:3306
 
+USER_MYSQL_SHARD_KEY_2=SHARD_2
 USER_MYSQL_DATABASE_2=gocrafter_user_2
 USER_MYSQL_WRITE_USER_2=mysql_user
 USER_MYSQL_WRITE_PASSWORD_2=mysql_password
