--- a/docs/api/request/account/LoginAccount.yaml
+++ b/docs/api/request/account/LoginAccount.yaml
@@ -3,7 +3,7 @@ package: account
 structure:
   ShardKey:
     name: shard_key
-    type: int
+    type: string
     nullable: false
     number: 1
   UUID:
