--- a/docs/api/request/loginReward/ReceiveLoginReward.yaml
+++ b/docs/api/request/loginReward/ReceiveLoginReward.yaml
@@ -3,7 +3,7 @@ package: loginReward
 structure:
   ShardKey:
     name: shard_key
-    type: int
+    type: string
     nullable: false
     number: 1
   AccountID:
