--- a/docs/api/response/loginReward/Item.yaml
+++ b/docs/api/response/loginReward/Item.yaml
@@ -16,3 +16,8 @@ structure:
     type: string
     nullable: false
     number: 3
+  Count:
+    name: count
+    type: int
+    nullable: false
+    number: 5
