--- a/docs/api/response/loginReward/LoginRewardReward.yaml
+++ b/docs/api/response/loginReward/LoginRewardReward.yaml
@@ -10,14 +10,19 @@ structure:
     name: item_name
     type: string
     nullable: false
-    number: 3
+    number: 2
   StepNumber:
     name: step_number
     type: int
     nullable: false
-    number: 5
+    number: 3
   Name:
     name: name
     type: string
     nullable: false
     number: 4
+  Count:
+    name: count
+    type: int
+    nullable: false
+    number: 5
