報酬に設定できるアイテムを複数設定できるように修正

--- a/docs/api/request/item/ReceiveItemInBox.yaml
+++ b/docs/api/request/item/ReceiveItemInBox.yaml
@@ -11,13 +11,8 @@ structure:
     type: int64
     nullable: false
     number: 2
-  ItemName:
-    name: item_name
-    type: string
+  Items:
+    name: items
+    type: Items
     nullable: false
     number: 3
-  Count:
-    name: count
-    type: int
-    nullable: false
-    number: 4
