--- a/docs/api/response/loginReward/LoginRewardReward.yaml
+++ b/docs/api/response/loginReward/LoginRewardReward.yaml
@@ -6,23 +6,18 @@ structure:
     type: int64
     nullable: false
     number: 1
-  ItemName:
-    name: item_name
-    type: string
-    nullable: false
-    number: 2
   StepNumber:
     name: step_number
     type: int
     nullable: false
-    number: 3
-  Name:
-    name: name
-    type: string
-    nullable: false
-    number: 4
+    number: 2
   Count:
     name: count
     type: int
     nullable: false
-    number: 5
+    number: 3
+  Items:
+    name: items
+    type: Items
+    nullable: false
+    number: 4
