--- a/docs/api/response/loginReward/LoginRewardStatus.yaml
+++ b/docs/api/response/loginReward/LoginRewardStatus.yaml
@@ -11,9 +11,9 @@ structure:
     type: LoginRewardModel
     nullable: false
     number: 2
-  Item:
-    name: item
-    type: Item
+  Items:
+    name: items
+    type: Items
     nullable: false
     number: 3
   LastReceivedAt:
