--- a/docs/entity/master/LoginRewardItem.yaml
+++ b/docs/entity/master/LoginRewardItem.yaml
@@ -1,4 +1,4 @@
-name: LoginRewardReward
+name: LoginRewardItem
 package: loginReward
 structure:
   ID:
@@ -6,37 +6,27 @@ structure:
     type: int64
     nullable: false
     number: 1
-  LoginRewardModelName:
-    name: login_reward_model_name
-    type: string
-    nullable: false
-    number: 2
   Name:
     name: name
     type: string
     nullable: false
-    number: 3
-  StepNumber:
-    name: step_number
+    number: 2
+  Count:
+    name: count
     type: int
     nullable: false
-    number: 4
-  Items:
-    name: items
-    type: string #json
-    number: 5
+    number: 3
   CreatedAt:
     name: created_at
     type: time.Time
     nullable: false
-    number: 6
+    number: 4
   UpdatedAt:
     name: updated_at
     type: time.Time
     nullable: false
-    number: 7
+    number: 5
 primary:
   - ID
 index:
   - Name
-  - LoginRewardModelName
