レスポンスの生成処理を修正

--- a/docs/api/response/loginReward/Event.yaml
+++ b/docs/api/response/loginReward/Event.yaml
@@ -14,7 +14,7 @@ structure:
   ResetHour:
     name: repeat_hour
     type: int
-    nullable: true
+    nullable: false
     number: 3
   RepeatSetting:
     name: repeat_setting
