--- a/docs/api/response/loginReward/LoginRewardModel.yaml
+++ b/docs/api/response/loginReward/LoginRewardModel.yaml
@@ -17,7 +17,7 @@ structure:
     nullable: false
     number: 3
   LoginRewardRewards:
-    name: login_reward_reward
+    name: login_reward_rewards
     type: LoginRewardRewards
     nullable: false
     number: 4
