--- a/docs/entity/master/Event.yaml
+++ b/docs/entity/master/Event.yaml
@@ -14,7 +14,7 @@ structure:
   ResetHour:
     name: reset_hour
     type: int
-    nullable: true
+    nullable: false
     number: 3
   RepeatSetting:
     name: repeat_setting
