--- a/.env.local
+++ b/.env.local
@@ -4,7 +4,16 @@ TZ=Asia/Tokyo
 # Auth
 AUTH_SECRET=secret_key
 
-# ConfigDB
+# Auth DB
+AUTH_MYSQL_DATABASE=gocrafter_auth
+AUTH_MYSQL_WRITE_USER=mysql_user
+AUTH_MYSQL_WRITE_PASSWORD=mysql_password
+AUTH_MYSQL_WRITE_HOST=host.docker.internal:3306
+AUTH_MYSQL_READ_USER=mysql_user
+AUTH_MYSQL_READ_PASSWORD=mysql_password
+AUTH_MYSQL_READ_HOST=host.docker.internal:3306
+
+# Config DB
 CONFIG_MYSQL_DATABASE=gocrafter_config
 CONFIG_MYSQL_WRITE_USER=mysql_user
 CONFIG_MYSQL_WRITE_PASSWORD=mysql_password
@@ -13,7 +22,7 @@ CONFIG_MYSQL_READ_USER=mysql_user
 CONFIG_MYSQL_READ_PASSWORD=mysql_password
 CONFIG_MYSQL_READ_HOST=host.docker.internal:3306
 
-# MasterDB
+# Master DB
 MASTER_MYSQL_DATABASE=gocrafter_master
 MASTER_MYSQL_WRITE_USER=mysql_user
 MASTER_MYSQL_WRITE_PASSWORD=mysql_password
@@ -22,7 +31,7 @@ MASTER_MYSQL_READ_USER=mysql_user
 MASTER_MYSQL_READ_PASSWORD=mysql_password
 MASTER_MYSQL_READ_HOST=host.docker.internal:3306
 
-# UserDB
+# User DB
 SHARD_COUNT=2
 USER_MYSQL_SHARD_KEY_1=SHARD_1
 USER_MYSQL_DATABASE_1=gocrafter_user_1
