--- a/docker/auth/Dockerfile
+++ b/docker/auth/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
-RUN go build -o main /app/api/main.go
+RUN go build -o main /app/auth/main.go
 
 # Run Production
 FROM alpine AS prod
@@ -14,8 +14,7 @@ WORKDIR /app
 COPY --from=builder /app/main .
 COPY .env .
 RUN mkdir /app/log
-COPY /log/api_debug.log /app/log
-COPY /log/batch_debug.log /app/log
+COPY /log/auth_debug.log /app/log
 COPY wait-for.sh .
 RUN chmod +x wait-for.sh
 
