--- a/.env.test
+++ b/.env.test
@@ -4,6 +4,15 @@ TZ=Asia/Tokyo
 # Auth
 AUTH_SECRET=secret_key
 
+# Auth DB
+AUTH_MYSQL_DATABASE=gocrafter_auth_test
+AUTH_MYSQL_WRITE_USER=mysql_user
+AUTH_MYSQL_WRITE_PASSWORD=mysql_password
+AUTH_MYSQL_WRITE_HOST=host.docker.internal:3307
+AUTH_MYSQL_READ_USER=mysql_user
+AUTH_MYSQL_READ_PASSWORD=mysql_password
+AUTH_MYSQL_READ_HOST=host.docker.internal:3307
+
 # ConfigDB
 CONFIG_MYSQL_DATABASE=gocrafter_config_test
 CONFIG_MYSQL_WRITE_USER=mysql_user
