--- a/.env.local
+++ b/.env.local
@@ -4,6 +4,15 @@ TZ=Asia/Tokyo
 # Auth
 AUTH_SECRET=secret_key
 
+# Admin DB
+ADMIN_MYSQL_DATABASE=gocrafter_admin
+ADMIN_MYSQL_WRITE_USER=mysql_user
+ADMIN_MYSQL_WRITE_PASSWORD=mysql_password
+ADMIN_MYSQL_WRITE_HOST=host.docker.internal:3306
+ADMIN_MYSQL_READ_USER=mysql_user
+ADMIN_MYSQL_READ_PASSWORD=mysql_password
+ADMIN_MYSQL_READ_HOST=host.docker.internal:3306
+
 # Auth DB
 AUTH_MYSQL_DATABASE=gocrafter_auth
 AUTH_MYSQL_WRITE_USER=mysql_user
