Exampleを取得するAPIを追加

--- a/docs/admin/request/example/GetExample.yaml
+++ b/docs/admin/request/example/GetExample.yaml
@@ -2,7 +2,7 @@ name: GetExample
 package: example
 structure:
   ID:
-    name: uuid
-    type: string
+    name: id
+    type: int64
     nullable: false
     number: 1
