テストDBを追加

--- a/.env.test
+++ b/.env.test
@@ -4,6 +4,15 @@ TZ=Asia/Tokyo
 # Auth
 AUTH_SECRET=secret_key
 
+# Admin DB
+ADMIN_MYSQL_DATABASE=gocrafter_admin_test
+ADMIN_MYSQL_WRITE_USER=mysql_user
+ADMIN_MYSQL_WRITE_PASSWORD=mysql_password
+ADMIN_MYSQL_WRITE_HOST=host.docker.internal:3307
+ADMIN_MYSQL_READ_USER=mysql_user
+ADMIN_MYSQL_READ_PASSWORD=mysql_password
+ADMIN_MYSQL_READ_HOST=host.docker.internal:3307
+
 # Auth DB
 AUTH_MYSQL_DATABASE=gocrafter_auth_test
 AUTH_MYSQL_WRITE_USER=mysql_user
