--- a/docs/yaml/pkg/infrastructure/mysql/user/account/userAccount/user_account.yaml
+++ b/docs/yaml/pkg/infrastructure/mysql/user/account/userAccount/user_account.yaml
@@ -13,23 +13,39 @@ structure:
     name: name
     type: string
     nullable: false
-    number: 3
+    number: 2
     comment: "ユーザー名"
   Password:
     name: password
     type: string
     nullable: false
-    number: 4
+    number: 3
     comment: "パスワード"
   LoginAt:
     name: login_at
     type: time
     nullable: false
-    number: 5
+    number: 4
     comment: "ログイン日時"
   LogoutAt:
     name: logout_at
     type: time
     nullable: false
-    number: 6
+    number: 5
     comment: "ログアウト日時"
+  CreatedAt:
+    name: created_at
+    type: time.Time
+    nullable: false
+    number: 6
+    comment: "作成日時"
+  UpdatedAt:
+    name: updated_at
+    type: time.Time
+    nullable: false
+    number: 7
+    comment: "更新日時"
+primary:
+  - UserId
+unique:
+  - UserId
