--- a/docs/yaml/pkg/infrastructure/mysql/user/userAccount/user_account.yaml
+++ b/docs/yaml/pkg/infrastructure/mysql/user/userAccount/user_account.yaml
@@ -35,13 +35,13 @@ structure:
     comment: "ログアウト日時"
   CreatedAt:
     name: created_at
-    type: time.Time
+    type: time
     nullable: false
     number: 6
     comment: "作成日時"
   UpdatedAt:
     name: updated_at
-    type: time.Time
+    type: time
     nullable: false
     number: 7
     comment: "更新日時"
