--- a/docs/yaml/api/game/account/account_create_response.yaml
+++ b/docs/yaml/api/game/account/account_create_response.yaml
@@ -3,10 +3,9 @@ package: account
 comment: "アカウント作成レスポンス"
 
 structure:
-  UserAccount:
-    name: user_account
-    type: structure
-    package: account/userAccount
-    nullable: true
+  UserAccounts:
+    name: user_accounts
+    type: structures
+    nullable: false
     number: 1
     comment: "ユーザーアカウント"
