Run: docker_fmt

--- a/docs/yaml/api/game/account/account_create_response.yaml
+++ b/docs/yaml/api/game/account/account_create_response.yaml
@@ -3,9 +3,9 @@ package: account
 comment: "アカウント作成レスポンス"
 
 structure:
-  UserAccounts:
-    name: user_accounts
-    type: structures
+  UserAccount:
+    name: user_account
+    type: structure
     nullable: false
     number: 1
     comment: "ユーザーアカウント"
