--- a/docs/yaml/api/game/account/account_create_response.yaml
+++ b/docs/yaml/api/game/account/account_create_response.yaml
@@ -6,6 +6,6 @@ structure:
   UserAccount:
     name: user_account
     type: structure
-    nullable: false
+    nullable: true
     number: 1
     comment: "ユーザーアカウント"
