Run: docker_gen_infra

--- a/docs/yaml/pkg/infrastructure/mysql/master/masterLoginBonus/master_login_bonus.yaml
+++ b/docs/yaml/pkg/infrastructure/mysql/master/masterLoginBonus/master_login_bonus.yaml
@@ -9,12 +9,12 @@ structure:
     nullable: false
     number: 1
     comment: "ID"
-  MasterEventId:
-    name: master_event_id
+  MasterLoginBonusEventId:
+    name: master_login_bonus_event_id
     type: int64
     nullable: false
     number: 2
-    comment: "イベントID"
+    comment: "ログボーナスイベントID"
   Name:
     name: name
     type: string
@@ -26,4 +26,4 @@ primary:
 unique:
   - Id
 index:
-  - MasterEventId
+  - MasterLoginBonusEventId
