Add: login bonus service

--- a/docs/yaml/pkg/domain/model/item/item_receive_request.yaml
+++ b/docs/yaml/pkg/domain/model/item/item_receive_request.yaml
@@ -9,9 +9,9 @@ structure:
     nullable: false
     number: 1
     comment: "ユーザーID"
-  MasterItemIds:
-    name: master_item_ids
-    type: int64
+  Items:
+    name: items
+    type: structures
     nullable: false
     number: 2
-    comment: "アイテムID"
+    comment: "アイテム一覧"
