--- a/docs/yaml/pkg/infrastructure/mysql/master/masterLoginBonusEvent/master_login_bonus_event.yaml
+++ b/docs/yaml/pkg/infrastructure/mysql/master/masterLoginBonusEvent/master_login_bonus_event.yaml
@@ -9,51 +9,44 @@ structure:
     nullable: false
     number: 1
     comment: "ID"
-  MasterLoginBonusId:
-    name: master_login_bonus_id
-    type: int64
-    nullable: false
-    number: 2
-    comment: "ログボーナスID"
   Name:
     name: name
     type: string
     nullable: false
-    number: 3
+    number: 2
     comment: "イベント名"
   ResetHour:
     name: reset_hour
     type: int32
     nullable: false
-    number: 4
+    number: 3
     comment: "リセット時間"
   IntervalHour:
     name: interval_hour
     type: int32
     nullable: false
-    number: 5
+    number: 4
     comment: "間隔時間"
   RepeatSetting:
     name: repeat_setting
     type: bool
     nullable: false
-    number: 6
+    number: 5
     comment: "繰り返し設定"
   StartAt:
     name: start_at
-    type: time.Time
+    type: time
     nullable: false
-    number: 7
+    number: 6
     comment: "開始日時"
   EndAt:
     name: end_at
-    type: time.Time
+    type: time
     nullable: true
-    number: 8
+    number: 7
     comment: "終了日時"
 primary:
   - Id
 unique:
   - Id
 index:
-  - MasterLoginBonusId
