--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build
-        run: docker compose -f docker-compose.test.yml up -d --build
+        run: docker compose -f docker-compose.test.yaml up -d --build
 
       - name: Sleep for 10 seconds
         run: sleep 10
@@ -26,7 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build
-        run: docker compose -f docker-compose.test.yml up -d --build
+        run: docker compose -f docker-compose.test.yaml up -d --build
 
       - name: Sleep for 10 seconds
         run: sleep 10
