--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         run: sleep 10
 
       - name: Usecase Test
-        run: docker compose -f docker-compose.test.yml exec api-game-test go test -v ./api/game/usecase/...
+        run: docker compose -f docker-compose.test.yaml exec api-game-test go test -v ./api/game/usecase/...
 
   domain_test:
     name: Run Domain Test
@@ -32,4 +32,4 @@ jobs:
         run: sleep 10
 
       - name: Service Test
-        run: docker compose -f docker-compose.test.yml exec api-game-test go test -v ./pkg/domain/...
+        run: docker compose -f docker-compose.test.yaml exec api-game-test go test -v ./pkg/domain/...
