--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Sleep for 10 seconds
         run: sleep 10
 
-      - name: Usecase Test
-        run: docker compose -f docker-compose.test.yaml exec api-game-test go test -v ./api/game/usecase/...
+      - name: Application Test
+        run: docker-compose -f docker-compose.test.yaml exec api-game-test go test -v ./api/game/...
 
       - name: Domain Test
-        run: docker compose -f docker-compose.test.yaml exec api-game-test go test -v ./pkg/domain/...
+        run: docker-compose -f docker-compose.test.yaml exec api-game-test go test -v ./pkg/domain/...
