--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,4 +32,4 @@ jobs:
         run: sleep 10
 
       - name: Domain Test
-        run: docker compose -f docker-compose.test.yaml exec api-game-test go test -v pkg/domain/...
+        run: docker compose -f docker-compose.test.yaml exec api-game-test go test -v ./pkg/domain/...
