Add: friend approve

--- a/docs/yaml/api/game/friend/friend.yaml
+++ b/docs/yaml/api/game/friend/friend.yaml
@@ -11,3 +11,11 @@ structure:
     response: FriendSendResponse
     number: 1
     comment: "フレンド申請を送信する"
+  Approve:
+    name: approve
+    method: unary
+    auth: true
+    request: FriendApproveRequest
+    response: FriendApproveResponse
+    number: 1
+    comment: "フレンド申請を承諾する"
