--- a/docs/yaml/api/game/friend/friend_approve_request.yaml
+++ b/docs/yaml/api/game/friend/friend_approve_request.yaml
@@ -1,6 +1,6 @@
-name: FriendSendRequest
+name: FriendApproveRequest
 package: friend
-comment: "フレンド送信リクエスト"
+comment: "フレンド承認リクエスト"
 
 structure:
   UserId:
