--- a/docs/yaml/pkg/domain/model/friend/friend_approve_response.yaml
+++ b/docs/yaml/pkg/domain/model/friend/friend_approve_response.yaml
@@ -1,6 +1,6 @@
-name: FriendSendResponse
+name: FriendApproveResponse
 package: friend
-comment: "フレンド送信レスポンス"
+comment: "フレンド承認レスポンス"
 
 structure:
   UserFriend:
