--- a/docs/yaml/api/game/friend/friend_approve_response.yaml
+++ b/docs/yaml/api/game/friend/friend_approve_response.yaml
@@ -1,12 +1,11 @@
-name: FriendSendResponse
+name: FriendApproveResponse
 package: friend
-comment: "フレンド送信レスポンス"
+comment: "フレンド承認レスポンス"
 
 structure:
   UserFriend:
     name: user_friend
     type: structure
-    package: friend/userFriend
     nullable: true
     number: 1
     comment: "ユーザーフレンド"
