--- a/docs/yaml/pkg/domain/enum/friend_type.yaml
+++ b/docs/yaml/pkg/domain/enum/friend_type.yaml
@@ -19,3 +19,7 @@ structure:
     name: Disapproved
     number: 3
     comment: "拒否"
+  NotFriend:
+    name: NotFriend
+    number: 4
+    comment: "フレンドではない"
