Add: friend get

--- a/docs/yaml/api/game/friend/friend.yaml
+++ b/docs/yaml/api/game/friend/friend.yaml
@@ -3,13 +3,21 @@ package: friend
 comment: "フレンド"
 
 structure:
+  Get:
+    name: get
+    method: unary
+    auth: true
+    request: FriendGetRequest
+    response: FriendGetResponse
+    number: 1
+    comment: "フレンドを取得する"
   Send:
     name: send
     method: unary
     auth: true
     request: FriendSendRequest
     response: FriendSendResponse
-    number: 1
+    number: 2
     comment: "フレンド申請を送信する"
   Approve:
     name: approve
@@ -17,7 +25,7 @@ structure:
     auth: true
     request: FriendApproveRequest
     response: FriendApproveResponse
-    number: 2
+    number: 3
     comment: "フレンド申請を承諾する"
   Disapprove:
     name: disapprove
@@ -25,7 +33,7 @@ structure:
     auth: true
     request: FriendDisapproveRequest
     response: FriendDisapproveResponse
-    number: 3
+    number: 4
     comment: "フレンド申請を拒否する"
   Delete:
     name: delete
@@ -33,5 +41,5 @@ structure:
     auth: true
     request: FriendDeleteRequest
     response: FriendDeleteResponse
-    number: 3
+    number: 5
     comment: "フレンドを削除する"
