--- a/docs/yaml/api/game/loginBonus/login_bonus.yaml
+++ b/docs/yaml/api/game/loginBonus/login_bonus.yaml
@@ -3,11 +3,19 @@ package: loginBonus
 comment: "ログインボーナス"
 
 structure:
+  GetMaster:
+    name: get_master
+    method: unary
+    auth: true
+    request: LoginBonusGetMasterRequest
+    response: LoginBonusGetMasterResponse
+    number: 1
+    comment: "ログインボーナスマスターを取得する"
   Receive:
     name: receive
     method: unary
     auth: true
     request: LoginBonusReceiveRequest
     response: LoginBonusReceiveResponse
-    number: 1
+    number: 2
     comment: "ログインボーナスを受け取る"
