--- a/docs/yaml/api/game/idleBonus/idle_bonus.yaml
+++ b/docs/yaml/api/game/idleBonus/idle_bonus.yaml
@@ -3,6 +3,14 @@ package: idleBonus
 comment: "放置ボーナス"
 
 structure:
+  GetMaster:
+    name: get_master
+    method: unary
+    auth: true
+    request: IdleBonusGetMasterRequest
+    response: IdleBonusGetMasterResponse
+    number: 1
+    comment: "放置ボーナスマスターを取得する"
   Receive:
     name: receive
     method: unary
