--- a/docs/yaml/api/game/idleBonus/idle_bonus.yaml
+++ b/docs/yaml/api/game/idleBonus/idle_bonus.yaml
@@ -3,13 +3,21 @@ package: idleBonus
 comment: "放置ボーナス"
 
 structure:
+  GetUser:
+    name: get_user
+    method: unary
+    auth: true
+    request: IdleBonusGetUserRequest
+    response: IdleBonusGetUserResponse
+    number: 1
+    comment: "放置ボーナスユーザーを取得する"
   GetMaster:
     name: get_master
     method: unary
     auth: true
     request: IdleBonusGetMasterRequest
     response: IdleBonusGetMasterResponse
-    number: 1
+    number: 2
     comment: "放置ボーナスマスターを取得する"
   Receive:
     name: receive
@@ -17,5 +25,5 @@ structure:
     auth: true
     request: IdleBonusReceiveRequest
     response: IdleBonusReceiveResponse
-    number: 1
+    number: 3
     comment: "放置ボーナスを受け取る"
