--- a/docs/yaml/pkg/domain/model/action/masterAction/master_action.yaml
+++ b/docs/yaml/pkg/domain/model/action/masterAction/master_action.yaml
@@ -15,12 +15,12 @@ structure:
     nullable: false
     number: 2
     comment: "アクション名"
-  ActionType:
-    name: action_type
-    type: string
+  ActionStepType:
+    name: action_step_type
+    type: enum
     nullable: false
     number: 3
-    comment: "アクションタイプ"
+    comment: "アクションステップタイプ"
   AnyId:
     name: any_id
     type: int64
@@ -33,9 +33,9 @@ structure:
     nullable: true
     number: 5
     comment: "トリガーになるアクションのID"
-  NextActionId:
-    name: next_action_id
-    type: int64
+  Expiration:
+    name: expiration
+    type: int32
     nullable: true
     number: 6
-    comment: "発火するアクションのID"
+    comment: "有効期限"
