--- a/docs/yaml/pkg/infrastructure/mysql/user/userAction/user_action.yaml
+++ b/docs/yaml/pkg/infrastructure/mysql/user/userAction/user_action.yaml
@@ -21,17 +21,23 @@ structure:
     nullable: false
     number: 3
     comment: "マスターアクションID"
+  StartedAt:
+    name: started_at
+    type: time
+    nullable: false
+    number: 4
+    comment: "開始日時"
   CreatedAt:
     name: created_at
     type: time
     nullable: false
-    number: 6
+    number: 5
     comment: "作成日時"
   UpdatedAt:
     name: updated_at
     type: time
     nullable: false
-    number: 7
+    number: 6
     comment: "更新日時"
 primary:
   - UserId,MasterActionId
